cfscript/grammar.js
    program: ($) => seq(
      repeat(
        choice(
          $.import_statement,
          $.tag_statement,
          $.comment,
        ),
      ),
      choice(
        $.component,
        // `static_initializer` is reachable at the top level as well as inside
        // `component_body`, because that is what an injected region can be.
        // `injections.scm` hands the body of a tag-based component's
        // `<cfscript>` island to this grammar as a bare region, and that region
        // is a *component body* rather than a statement list — so a file that
        // is perfectly valid CFML reported an error inside an editor using the
        // injection queries. `property` already parsed here; `static { … }` was
        // the one component-level construct that did not.
        repeat(choice($.statement, $.static_initializer)),
      ),
    ),


    /*
        START SCRIPT BASE RULES
      */
    import_statement: ($) => seq(
      $._kw_import,
      choice(
        seq($.import_clause, $._from_clause),
        field('source', $.string),
        field('source', $.identifier),
        field('source', $.import_path),
      ),
      optional($.import_attribute),
      $._semicolon,
    ),

    import_path: ($) => seq($.identifier, repeat1(seq('.', choice($.identifier, '*')))),

    _from_clause: ($) => seq(
      'from', field('source', $.string),
    ),

    expression_statement: ($) => seq(
      $._expressions,
      $._semicolon,
    ),

    // `var x = 1`, and the Lucee member forms `final MEMBER = "value"` and
    // `public prop = "prop"` inside a component body.
    variable_declaration: ($) => choice(
      seq(
        choice(
          $._kw_var,
          $._kw_final,
          seq($._kw_final, $._kw_var),
          seq($._kw_var, $._kw_final),
        ),
        commaSep1($.variable_declarator),
        $._semicolon,
      ),
      // `public prop = "prop"`. Access modifiers only — `static` and `abstract`
      // are excluded because `static { … }` and `abstract component { … }` claim
      // those words. The negative dynamic precedence keeps
      // `private component function f()` a function declaration: there the
      // modifier is followed by a return type, not a variable name.
      prec.dynamic(-1, seq(
        alias(choice($._kw_public, $._kw_private, $._kw_package, $._kw_remote), $.access_type),
        // `public final MEMBER = "v";` — the two modifiers combine. `final`
        // alone is the first branch above, and an access modifier alone is this
        // one; only the pair had no reading. It stays after the access modifier
        // because that is the order Lucee writes, and keeping it here rather
        // than in the `choice` above avoids making `final` reachable twice.
        optional(alias($._kw_final, $.access_type)),
        commaSep1(alias($._plain_declarator, $.variable_declarator)),
        $._semicolon,
      )),
    ),

    // A member declaration's name is a plain identifier — no keywords and no
    // scoped name. Accepting keywords here would make `component` after
    // `public` lex as a keyword, and `public component function f()` is a
    // function declaration with a return type, not a member.
    _plain_declarator: ($) => seq(
      // `default` has to be spelled out. Admitting it as a function modifier
      // (`public default any function f()`) makes `_kw_default` valid straight
      // after an access modifier, so it lexes as a keyword here too and
      // `public default = 1;` — an ordinary member named `default` — stopped
      // parsing. Same shape as the `_reserved_identifier` entries elsewhere:
      // a keyword made valid in a new position has to keep its identifier
      // reading in every rule that shared the position.
      field('name', choice($.identifier, alias($._kw_default, $.identifier))),
      optional($._initializer),
    ),

    variable_declarator: ($) => seq(
      // A scoped name is legal in CFML: `var local.result = …`, `var a.b.c = 1`.
      // `_reserved_identifier` has to be spelled out because allowing a
      // `member_expression` here makes keyword-led expressions valid straight
      // after `var`, so `var new = 1` would otherwise lex `new` as a keyword.
      // `var mappings[ key ] = value` is the same idea one step further —
      // declare and index in one statement. Kept next to `member_expression`
      // because CFML treats `a.b` and `a["b"]` as the same access.
      field('name', choice(
        $.identifier,
        alias($._reserved_identifier, $.identifier),
        $.member_expression,
        $.subscript_expression,
        $._destructuring_pattern,
      )),
      optional($._initializer),
    ),

    statement_block: ($) => prec.right(seq(
      '{',
      repeat($.statement),
      '}',
      optional($._automatic_semicolon),
    )),

    else_clause: ($) => seq($._kw_else, $.statement),

    if_statement: ($) => prec.right(seq(
      $._kw_if,
      field('condition', $.parenthesized_expression),
      field('consequence', $.statement),
      optional(field('alternative', $.else_clause)),
    )),

    switch_statement: ($) => seq(
      $._kw_switch,
      field('value', $.parenthesized_expression),
      field('body', $.switch_body),
    ),

    for_statement: ($) => seq(
      $._kw_for,
      '(',
      choice(
        field('initializer', $.variable_declaration),
        seq(field('initializer', $._expressions), ';'),
        field('initializer', $.empty_statement),
      ),
      field('condition', choice(
        seq($._expressions, ';'),
        $.empty_statement,
      )),
      field('increment', optional($._expressions)),
      ')',
      field('body', $.statement),
    ),

    while_statement: ($) => seq(
      $._kw_while,
      field('condition', $.parenthesized_expression),
      field('body', $.statement),
    ),

    do_statement: ($) => prec.right(seq(
      $._kw_do,
      field('body', $.statement),
      $._kw_while,
      field('condition', $.parenthesized_expression),
      optional($._semicolon),
    )),

    try_statement: ($) => seq(
      $._kw_try,
      // `try x = nonExistantVariable; catch( any e ){ … }` — Lucee accepts a
      // single unbraced statement as the body. The unbraced alternative is an
      // `expression_statement` rather than a general `$.statement`, which is
      // what the construct needs and is also the only spelling that generates:
      // a `statement_block` *is* reachable as a `$.statement`, so the general
      // form makes the braced body match both alternatives and `try { } { }`
      // ambiguous over which brace pair is the body. A precedence on the
      // `statement_block` arm does not settle that — the competing reduction is
      // `statement_block` → `statement`, outside this rule — and the only other
      // resolutions offered touch `statement` itself, which is live at every
      // statement in the language.
      field('body', choice($.statement_block, $.expression_statement)),
      repeat(field('handler', $.catch_clause)),
      optional(field('finalizer', $.finally_clause)),
    ),

    break_statement: ($) => seq(
      $._kw_break,
      field('label', optional(alias($.identifier, $.statement_identifier))),
      $._semicolon,
    ),

    continue_statement: ($) => seq(
      $._kw_continue,
      field('label', optional(alias($.identifier, $.statement_identifier))),
      $._semicolon,
    ),

    // `prec`, not a declared conflict: with `debugger` now a reserved
    // identifier, `debugger;` parses both as this statement and as a bare
    // expression. The statement is the right reading and precedence settles
    // it at generation time, where a conflict would carry two GLR stacks
    // every time the word appears.
    return_statement: ($) => seq(
      $._kw_return,
      optional($._expressions),
      $._semicolon,
    ),

    // `throw` takes an expression (`throw "msg";`) but is also called with
    // named arguments (`throw(type="x", message="y")` / `throw(type:"x")`).
    // `pair` is only reachable from `arguments`, so accept those explicitly.
    throw_statement: ($) => seq(
      $._kw_throw,
      choice(
        prec.dynamic(1, $.arguments),
        // `throw message="x" type="y";` — the bodyless tag-statement spelling,
        // which every other tag reaches through `tag_statement`. `throw` cannot:
        // it has this dedicated rule, and `_kw_throw` out-lexes the identifier
        // that `tag_statement` needs in its `tag` slot, so the attribute form
        // had no reading at all. Spelled with `parameter_attribute` exactly as
        // `include_statement` above already spells the same shape — a single
        // `assignment_expression` would not do, because what fails is the
        // *space*-separated pair rather than the first attribute.
        repeat1($.parameter_attribute),
        $._expressions,
      ),
      $._semicolon,
    ),

    switch_body: ($) => seq(
      '{',
      repeat(choice($.switch_case, $.switch_default)),
      '}',
    ),

    switch_case: ($) => seq(
      $._kw_case,
      field('value', $._expressions),
      ':',
      field('body', repeat($.statement)),
    ),

    switch_default: ($) => seq(
      $._kw_default,
      ':',
      field('body', repeat($.statement)),
    ),

    catch_clause: ($) => seq(
      $._kw_catch,
      optional(
        seq(
          '(',
          optional(field('type', alias(choice($.identifier, $.nested_identifier, $.string), $.catch_type))),
          // `catch( any var e )` — CommandBox's endpoints scope the caught
          // variable, which Lucee and ACF both accept.
          optional($._kw_var),
          field('parameter', choice($.identifier, $.nested_identifier, $._destructuring_pattern)),
          ')',
        ),
      ),
      field('body', $.statement_block),
    ),

    finally_clause: ($) => seq(
      $._kw_finally,
      field('body', $.statement_block),
    ),

    parenthesized_expression: ($) => seq(
      '(',
      $._expressions,
      ')',
    ),

    //
    // Expressions
    //
    _expressions: ($) => choice(
      $.expression,
      $.sequence_expression,
      $._hash_always_eval,
    ),

    object: ($) => prec('object', seq(
      '{',
      commaSep(optional(choice(
        $.pair,
        $.cf_pair,
        $.spread_element,
        $.method_definition,
        alias(
          choice($.identifier, $._reserved_identifier),
          $.shorthand_property_identifier,
        ),
      ))),
      '}',
    )),

    array: ($) => seq(
      '[',
      commaSep(optional(choice(
        $.expression,
        $.pair,
        $.spread_element,
      ))),
      ']',
    ),

    // `[ : ]` and `[ = ]` are both empty ordered structs; Lucee accepts either.
    component: ($) => prec('literal', seq(
      // One modifier only. The shared scanner skips a *run* of them when it
      // decides a file is a component file, but widening this to `repeat` to
      // match makes `abstract` at the head of a component-body member ambiguous
      // between an `access_type` and a nested component's modifier list, and
      // the conflict then pulls in `variable_declaration` as well (`final
      // MEMBER = "v"`). No corpus file writes two modifiers here — six write
      // `final component`, which this already accepts — so the trade is not
      // worth it. Recorded in LIMITATIONS.md.
      optional(choice($._kw_static, $._kw_abstract, $._kw_final)),
      choice(
        $._kw_component,
        $._kw_interface,
      ),
      // `component( javasettings = { } ) { … }` — Lucee's parenthesised settings
      // list, alongside the bare attribute spelling `component javasettings = { }`
      // that already parsed. Comma-separated inside the parentheses, matching
      // every other parenthesised list in the grammar.
      choice(
        repeat(seq(optional($.tag_linefeed), $.component_attribute)),
        seq('(', commaSep($.component_attribute), ')'),
      ),
      field('body', $.component_body),
    )),

    access_type: ($) => choice(
      $._kw_public,
      $._kw_private,
      $._kw_package,
      $._kw_remote,
      $._kw_static,
      $._kw_final,
      $._kw_abstract,
    ),

    // CFML type names are spelled with the same words as several keywords
    // (`Component listener`, `Static state`, `Final value`). Those words lex as
    // keywords here because `_reserved_identifier` makes them valid at the start
    // of a parameter, so accept them as a type name too.
    parameter_type: ($) => choice(
      keyword('Any'),
      keyword('String'),
      keyword('Numeric'),
      keyword('Xml'),
      keyword('Binary'),
      keyword('Boolean'),
      keyword('Date'),
      $._kw_function,
      keyword('Guid'),
      keyword('Query'),
      keyword('Void'),
      // `Component listener` — `component` lexes as a keyword here because
      // `_reserved_identifier` makes it valid at the start of a parameter, so it
      // never reaches `$.identifier` below.
      alias($._kw_component, $.identifier),
      $.path,
      $.identifier,
    ),

    _call_signature: ($) => field('parameters', $.formal_parameters),
    call_expression: ($) => choice(
      prec('call', seq(
        field('function', choice($.primary_expression, $._hash_always_eval)),
        field('arguments', $.arguments),
      )),
      prec('member', seq(
        field('function', $.primary_expression),
        field('optional_chain', $.optional_chain),
        field('arguments', $.arguments),
      )),
    ),

    new_expression: ($) => prec.right('new', choice(
      seq(
        $._kw_new,
        // Standalone token on purpose: inside `new <X>` the extracted keyword
        // would lex as an identifier, breaking the inline-component form.
        $._kw_component,
        repeat(seq(optional($.tag_linefeed), $.component_attribute)),
        field('body', $.component_body),
      ),
      seq(
        $._kw_new,
        // One token including the `:`, not `seq(choice('java','cfml'), ':')`.
        // As separate tokens the bare `java` and `cfml` out-lex `identifier`
        // straight after `new`, so `new java.util.Properties()` lexed `java` as
        // the prefix and then demanded a colon. Requiring the colon inside the
        // token means `java.` simply fails to match it and falls back to an
        // identifier, which is what CFML's Java interop needs.
        optional(field('prefix', alias($._new_type_prefix, $.type_prefix))),
        optional(field('constructor', choice($.primary_expression, $.new_expression))),
        // The arguments are REQUIRED, so a bare `new` cannot reduce to a
        // complete `new_expression` on its own. That self-completion was
        // costing more than it looked: `x = new.foo` parsed as a
        // `member_expression` whose object was an EMPTY `new_expression`,
        // rather than the identifier read it plainly is, and the same
        // reduction is what makes admitting `new_expression` before a
        // contested `:` expensive (see #98). Requiring the arguments removes
        // it and takes 16 states OUT of the table.
        //
        // The constructor stays optional on purpose: `new( … )` with no class
        // name is real CFML — a call to a user-defined function named `new`
        // (Slatwall's `BaseDAO`, RustCFML's new-UDF-dispatch tests) — and both
        // that reading and `x = new();` have to keep working.
        field('arguments', prec.dynamic(1, $.arguments)),
      ),
    )),

    member_expression: $ => prec('member', seq(
      field('object', choice($.expression, $.primary_expression)),
      choice('.', field('optional_chain', $.optional_chain), field('static_chain', $.static_chain)),
      field('property', choice(
        $.private_property_identifier,
        alias($.identifier, $.property_identifier),
        alias($._kw_new, $.property_identifier),
      )),
    )),

    this: (_) => keyword('This'),
